[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/components/ui/boost_menu/UIBoostMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/intro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/components/ui/boost_menu/movement_speed/UIMovementSpeed.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/components/ui/boost_menu/jumping/UIJumping.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/components/ui/boost_menu/jump_multiplier/UIJumpMultiplier.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/components/ui/boost_menu/jump_cooldown/UIJumpCooldown.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/components/ui/boost_menu/weapon/UIWeapon.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/components/ui/boost_menu/weapon_shot_cooldown/UIWeaponShotCooldown.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/components/ui/boost_menu/weapon_rotate/UIWeaponRotate.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/components/ui/boost_menu/weapon_rotate_duration/UIWeaponRotateDuration.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/components/ui/boost_menu/weapon_absorb/UIWeaponAbsorb.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/components/ui/boost_menu/weapon_shot/UIWeaponShot.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/components/ui/boost_menu/textures/distribute.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[node name="UIBoostMenu" type="CanvasLayer"]
pause_mode = 2
layer = -1
script = ExtResource( 1 )

[node name="Background" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 0.784314 )
polygon = PoolVector2Array( 0, 0, 0, 1080, 1920, 1080, 1920, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Header" type="Label" parent="."]
margin_left = 704.0
margin_top = 64.0
margin_right = 1216.0
margin_bottom = 129.0
custom_colors/font_color = Color( 1, 0.921569, 0.231373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Распределение навыков"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LevelingPoints" type="Label" parent="."]
margin_left = 712.0
margin_top = 128.0
margin_right = 1052.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0.262745, 0.627451, 0.278431, 1 )
custom_fonts/font = SubResource( 4 )
text = "Свободных очков:"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Value" type="Label" parent="LevelingPoints"]
margin_left = 345.0
margin_top = -8.0
margin_right = 373.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.937255, 0.32549, 0.313726, 1 )
custom_fonts/font = SubResource( 10 )
text = "0"
valign = 2
__meta__ = {
"_edit_lock_": true
}

[node name="UIMovementSpeed" parent="." instance=ExtResource( 3 )]
position = Vector2( 896, 256 )

[node name="UIJumping" parent="." instance=ExtResource( 4 )]
position = Vector2( 806, 304 )

[node name="UIJumpMultiplier" parent="." instance=ExtResource( 5 )]
position = Vector2( 896, 352 )

[node name="UIJumpCooldown" parent="." instance=ExtResource( 6 )]
position = Vector2( 895, 400 )

[node name="UIWeapon" parent="." instance=ExtResource( 7 )]
position = Vector2( 1112, 256 )

[node name="UIWeaponShot" parent="." instance=ExtResource( 12 )]
position = Vector2( 1024, 302 )

[node name="UIWeaponShotCooldown" parent="." instance=ExtResource( 8 )]
position = Vector2( 1024, 352 )

[node name="UIWeaponRotate" parent="." instance=ExtResource( 9 )]
position = Vector2( 1112, 400 )

[node name="UIWeaponRotateDuration" parent="." instance=ExtResource( 10 )]
position = Vector2( 1024, 448 )

[node name="UIWeaponAbsorb" parent="." instance=ExtResource( 11 )]
position = Vector2( 1112, 496 )

[node name="Distribute" type="Button" parent="."]
margin_left = 864.0
margin_top = 960.0
margin_right = 1056.0
margin_bottom = 1026.0
focus_mode = 0
custom_colors/font_color = Color( 1, 0.921569, 0.231373, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
icon = ExtResource( 13 )
flat = true
icon_align = 1
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Distribute" to="." method="_on_Distribute_pressed"]
